--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Aditya Tekumalla",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "socket.io": "^2.2.0"
